--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
           <div class="bagran">
               <div class="blog__text">
-                  <h1>midlcode.com <br>Капля кода</h1>
+                  <h1>Midlcode.com</h1>
               </div>
           </div>
       </section>
